--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,31 @@
     <meta charset="utf-8">
     <title>Data Lovers</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="Img/iconoLoL.png">
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <!-- <button id="probando" class="probando">Probando</button> -->
+      <select id="pet-select">
+        <option value="">--Please choose an option--</option>
+        <option id="pupu" type="button" value="dog">Dog</option>
+        <option value="cat">Cat</option>
+        <option value="hamster">Hamster</option>
+        <option value="parrot">Parrot</option>
+        <option value="spider">Spider</option>
+        <option value="goldfish">Goldfish</option>
+    </select>
+
+    <button id="fetcheame">Fetch!</button>
+    </div>
+    <div id="para-probar">
+      
+    </div>
     <!-- <script src="./data/injuries/injuries.js"></script> -->
     <!-- <script src="./data/pokemon/pokemon.js"></script> -->
     <!-- <script src="./data/steam/steam.js"></script> -->
     <!-- <script src="./data/worldbank/worldbank.js"></script> -->
-    <script src="./data/lol/lol.js"></script>
+    <!-- <script src="./data/lol/lol.js"></script> -->
     <script src="data.js"></script>
     <script src="main.js"></script>
   </body>
