--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,24 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Data Lovers</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="Img/iconoLoL.png">
+    <title>Data Lovers</title>
+    <link rel="icon" href="ImgFigma/iconoLoL.png">
   </head>
   <body>
+    <header class="navbar-fixed">
+      <img id="img-header" class="responsive-img" src="Img\runeterra-freljord-02-desktop2.jpg" alt="Fondo Runaterra">
+      <img id="navbar-header" class="responsive-img" src="Img\main-nav-bg.png" alt="Barra navegacion">
+    </header>
     <div id="root">
       <!-- <button id="probando" class="probando">Probando</button> -->
-      <select id="pet-select">
+      <!-- <select id="pet-select">
         <option value="">--Please choose an option--</option>
         <option id="pupu" type="button" value="dog">Dog</option>
         <option value="cat">Cat</option>
@@ -19,16 +29,17 @@
         <option value="goldfish">Goldfish</option>
     </select>
 
-    <button id="fetcheame">Fetch!</button>
+    <button id="fetcheame">Fetch!</button> -->
     </div>
-    <div id="para-probar">
+    <!-- <div id="para-probar">
       
-    </div>
+    </div> -->
     <!-- <script src="./data/injuries/injuries.js"></script> -->
     <!-- <script src="./data/pokemon/pokemon.js"></script> -->
     <!-- <script src="./data/steam/steam.js"></script> -->
     <!-- <script src="./data/worldbank/worldbank.js"></script> -->
     <!-- <script src="./data/lol/lol.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="data.js"></script>
     <script src="main.js"></script>
   </body>
