--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
     <link rel="stylesheet" href="style.css" />
@@ -15,7 +13,7 @@
   <body>
     <header>
       <img id="img-header" class="responsive-img" src="Img\img-header.png" alt="Fondo Runaterra">
-      <!-- <img id="navbar-header" class="responsive-img" src="Img\main-nav-bg.png" alt="Barra navegacion"> -->
+      <!-- <img id="navbar-header" class="responsive-img" src="Img\div-nav-bg.png" alt="Barra navegacion"> -->
       <div id="nav-buttons" class="center-align">
         <button id="champions">Champions</button>
         <button id="flame">Flame</button>
@@ -56,25 +54,12 @@
         </form>
               
     </div>
-    <main id="champ-container" class="container row">       
-    </main>
-    <div id="root">
-      <!-- <button id="probando" class="probando">Probando</button> -->
-      <!-- <select id="pet-select">
-        <option value="">--Please choose an option--</option>
-        <option id="pupu" type="button" value="dog">Dog</option>
-        <option value="cat">Cat</option>
-        <option value="hamster">Hamster</option>
-        <option value="parrot">Parrot</option>
-        <option value="spider">Spider</option>
-        <option value="goldfish">Goldfish</option>
-    </select>
-
-    <button id="fetcheame">Fetch!</button> -->
+    <div id="champ-container" class="container row">       
     </div>
-    <!-- <div id="para-probar">
-      
-    </div> -->
+    <div id="champ-container-mobile" class="container row">
+    </div>
+    <div id="root">
+    </div>
     <!-- <script src="./data/injuries/injuries.js"></script> -->
     <!-- <script src="./data/pokemon/pokemon.js"></script> -->
     <!-- <script src="./data/steam/steam.js"></script> -->
