--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,49 @@
       <img id="img-header" class="responsive-img" src="Img\runeterra-freljord-02-desktop2.jpg" alt="Fondo Runaterra">
       <img id="navbar-header" class="responsive-img" src="Img\main-nav-bg.png" alt="Barra navegacion">
     </header>
-    <div id="root">
+  <section>
+      <div id="Flame">
+        <div class="container">
+          <div class= "row">
+           <div class="col s1">
+            <p>No es sorpresa que en los juegos en línea existan usuarios que tengan conductas antideportivas, 
+              a este comportamiento se le denomina “Flame”, el cual consiste en mensajes deliberadamente hostiles 
+              o insultantes enviados sin ningún propósito constructivo, también lo es el abandono de la partida, 
+              hacer trampa, mala actitud, etc. En consecuencia, flamear es el acto de perjudicar el desarrollo del 
+              juego u ofender a otros jugadores usualmente dentro de una partida, y aquel que los envía, recibe el 
+              nombre de flamer.
+
+                ¿Haz sido victima de un flameo?,¿Sabes qué hacer en estos casos?, Riot Games entrega diversas 
+                herramientas para denunciar casos como estos durante y después del juego.
+                
+                Supongamos que estás en medio de una partida y ya estas harto de escuchar a Jugador4 que solo se ha 
+                dedicado a perder tiempo e insultar, no quieres ver ni escuchar sus mensajes, para esto se puede 
+                “mutear”, solo debes escribir /mute "nombre de invocador" o /ignore "nombre de invocador" 
+                (Ej: /mute Jugador4), no será notificado, por lo tanto no sabrá que ha sido silenciado y podrás 
+                volver a jugar tranquilamente.
+                
+                Pero si la mala actitud se mantiene, no aporta al equipo o infringe las normas del Código del Invocador, 
+                o de los Términos de Uso, puedes reportarlo, debes hacer clic en el signo de  exclamación del chat 
+                después de la partida o hacer clic derecho sobre su nombre de invocador. Los reportes le permiten a 
+                Riot Games juzgar, monitorear el comportamiento y aplicar un castigo al invocador reportado.
+            </p></div>
+          <div class="col s1">2</div>
+          <div class="col s1">3</div>
+          <div class="col s1">4</div>
+          <div class="col s1">5</div>
+          <div class="col s1">6</div>
+          <div class="col s1">7</div>
+          <div class="col s1">8</div>
+          <div class="col s1">9</div>
+          <div class="col s1">10</div>
+          <div class="col s1">11</div>
+          <div class="col s1">12</div>
+          </div> 
+          </div>
+        </div>
+        </div>
+        </div>
+    </section>
       <!-- <button id="probando" class="probando">Probando</button> -->
       <!-- <select id="pet-select">
         <option value="">--Please choose an option--</option>
