--- a/index.html
+++ b/index.html
@@ -21,10 +21,26 @@
       </div>
     </header>
   <section>
+        <div id="about-lolapp-section">
+        <div class="container">
+          <div class="row">
+            <div class="col m6 s12" id="lolapp">
+              <p>LOLApp es una aplicación web que nació con el propósito de entregar mejor información sobre los 
+                  champions de League of Legends a mujeres que están empezando a jugar (o que ya llevan tiempo) y quieren desarrollar 
+                  una mejor estrategia de juego; ofrecemos herramientas para saber cómo actuar en casos de 
+                  discriminación o “Flameo”, ya que es muy común que mujeres decidan no mencionar cual es su género o 
+                  derechamente dejen el juego por actitudes antideporivas como estas.</p></div> 
+            <div class="col s12 m6"><img class="responsive-img" id="image-lolapp" src="images/LOL/LOLApp.jpg"></div>
+            <div class="col m6 s12 center-align"><a class="waves-effect waves-light btn" id="button1">Volver al Inicio</a></div>
+            </div>
+        </div>
+      </div>
+    </section>
+    <section>
       <div id="flame-section">
         <div class="container">
           <div class= "row">
-           <div class="col-s12">
+           <div class="col s12">
             <p>No es sorpresa que en los juegos en línea existan usuarios que tengan conductas antideportivas, 
               a este comportamiento se le denomina “Flame”, el cual consiste en mensajes deliberadamente hostiles 
               o insultantes enviados sin ningún propósito constructivo, también lo es el abandono de la partida, 
@@ -46,9 +62,9 @@
                 después de la partida o hacer clic derecho sobre su nombre de invocador. Los reportes le permiten a 
                 Riot Games juzgar, monitorear el comportamiento y aplicar un castigo al invocador reportado.</p>
 
-            <div class="col-s12-m4-offset-m5"><img class="responsive-img" id="image-report" src="images/LOL/capture3.2.png"></div>
+            <div class="col s12 m4 offset-m4"><img class="responsive-img" id="image-report" src="images/LOL/capture3.2.png"></div>
 
-            <div class="col-s12"><p>Podrás usar el sistema para reportar una serie de comportamientos negativos:
+            <div class="col s12"><p>Podrás usar el sistema para reportar una serie de comportamientos negativos:
               <p><u class="text-color">ABUSO VERBAL</u> - Esta categoría engloba el uso de términos vulgares, obscenos, sexualmente explícitos o 
               reprobables por razones raciales, étnicas o de cualquier otra naturaleza.</p>
               <p><u class="text-color">MUERTE INTENCIONAL</u> – Esta categoría engloba aquellos comportamientos que implican dejarse matar de
@@ -69,30 +85,13 @@
            <div class="col-s12"><p>Recuerda que para hacer de esta comunidad un espacio sano y realmente competitivo es deber de todos mantener una 
              convivencia respetuosa entre los que participan. Para conocer más sobre buenas prácticas en el juego y en la comunidad 
               puedes leer el <a href=(https://euw.leagueoflegends.com/es/game-info/get-started/summoners-code/ id="codigoInvocador">Código del Invocador </a> y los 
-              <a href=https://euw.leagueoflegends.com/es/legal/termsofuse#section2 id="terminosUso">Términos de Uso.</a> 
-            </strong></p>
-          </div>
-          </div> 
-          </div>
+              <a href=https://euw.leagueoflegends.com/es/legal/termsofuse#section2 id="terminosUso">Términos de Uso.</a></strong></p></div>
+          </div>           
+          <div class="col s12 center-align"><a class="waves-effect waves-light btn" id="button2">Volver al Inicio</a></div>
+           </div>
         </div>
         </div>
-
-        <div id="about-lolapp">
-        <div class="container">
-          <div class="row">
-            <div class="col-m6 s12" id="text-lolapp">
-              <p>LOLApp es una aplicación web que nació con el propósito de entregar mejor información sobre los 
-                  champions de LoL a mujeres que están empezando a jugar (o que ya llevan tiempo) y quieren desarrollar 
-                  una mejor estrategia de juego; ofrecemos herramientas para saber cómo actuar en casos de 
-                  discriminación o “Flameo”, ya que es muy común que mujeres decidan no mencionar cual es su género o 
-                  derechamente dejen el juego por actitudes antideporivas como estas.</p>
-                  <a class="waves-effect waves-light btn" id="buttons">Volver al Inicio</a>
-                </div> 
-            <div class="col-s12-offset-s12"><img class="responsive-img" id="image-lolapp" src="images/LOL/LOLApp.jpg"></div>
-            </div>
-        </div>
-      </div>
-    </section>
+  </section>
       <!-- <button id="probando" class="probando">Probando</button> -->
       <!-- <select id="pet-select">
         <option value="">--Please choose an option--</option>
