arreglada la interaccion de los display none y block // al usar el boton de champions o los de volver se resetean los filtros antes de mostrar la data

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
             <div class="col s12 m4 offset-m4"><img class="responsive-img" id="image-report" src="images/LOL/capture3.2.png"></div>
 
-            <div class="col s12"><p>Podrás usar el sistema para reportar una serie de comportamientos negativos:
+            <div class="col s12">Podrás usar el sistema para reportar una serie de comportamientos negativos:
               <p><u class="text-color">ABUSO VERBAL</u> - Esta categoría engloba el uso de términos vulgares, obscenos, sexualmente explícitos o 
               reprobables por razones raciales, étnicas o de cualquier otra naturaleza.</p>
               <p><u class="text-color">MUERTE INTENCIONAL</u> – Esta categoría engloba aquellos comportamientos que implican dejarse matar de
@@ -84,26 +84,14 @@
               
            <div class="col-s12"><p>Recuerda que para hacer de esta comunidad un espacio sano y realmente competitivo es deber de todos mantener una 
              convivencia respetuosa entre los que participan. Para conocer más sobre buenas prácticas en el juego y en la comunidad 
-              puedes leer el <a href=(https://euw.leagueoflegends.com/es/game-info/get-started/summoners-code/ id="codigoInvocador">Código del Invocador </a> y los 
-              <a href=https://euw.leagueoflegends.com/es/legal/termsofuse#section2 id="terminosUso">Términos de Uso.</a></strong></p></div>
+              puedes leer el <a href="(https://euw.leagueoflegends.com/es/game-info/get-started/summoners-code/" id="codigoInvocador">Código del Invocador </a> y los 
+              <a href="https://euw.leagueoflegends.com/es/legal/termsofuse#section2" id="terminosUso">Términos de Uso.</a></p></div>
           </div>           
           <div class="col s12 center-align"><a href="#header" class="waves-effect waves-light btn" id="button2">Volver al Inicio</a></div>
            </div>
         </div>
         </div>
   </section>
-      <!-- <button id="probando" class="probando">Probando</button> -->
-      <!-- <select id="pet-select">
-        <option value="">--Please choose an option--</option>
-        <option id="pupu" type="button" value="dog">Dog</option>
-        <option value="cat">Cat</option>
-        <option value="hamster">Hamster</option>
-        <option value="parrot">Parrot</option>
-        <option value="spider">Spider</option>
-        <option value="goldfish">Goldfish</option>
-    </select>
-
-    <button id="fetcheame">Fetch!</button> -->
     <div id="filters" class="container row center-align">
       <form action="#" id="champion-filters">
           <p>
@@ -114,6 +102,10 @@
             <label>
               <input id="fighter" type="checkbox" value="Fighter" class="filter"/>
               <span>Fighter</span>
+            </label>
+            <label>
+              <input id="tank" type="checkbox" value="Tank" class="filter"/>
+              <span>Tank</span>
             </label>
             <label>
               <input id="mage" type="checkbox" value="Mage" class="filter"/>
@@ -137,7 +129,7 @@
             </label>
           </p>
         </form>  
-        <div class="container row valign-wrapper">
+        <div id="order-and-search" class="container row valign-wrapper">
           <div class="input-field col m3" id="sort-options">
             <select id="name">
               <option value="" disabled>Nombre</option>
@@ -156,20 +148,20 @@
         </div>  
     </div>
     <div id="general-champ-container">
-      <div id="champ-container" class="container row center-align">       
+      <div id="champ-container" class="container row">       
       </div>
       <div id="champ-container-mobile" class="container row">
       </div>
+    </div>
       <div id="individual-champs" class="container row">  
       </div>
-    </div>
     <!-- <script src="./data/injuries/injuries.js"></script> -->
     <!-- <script src="./data/pokemon/pokemon.js"></script> -->
     <!-- <script src="./data/steam/steam.js"></script> -->
     <!-- <script src="./data/worldbank/worldbank.js"></script> -->
     <!-- <script src="./data/lol/lol.js"></script> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="data.js"></script>
-    <script src="main.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script type="text/javascript" src="data.js"></script>
+    <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
