ultimos cambios al README

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
         <div class="container">
           <div class= "row">
            <div class="col s12">
-            <p>No es sorpresa que en los juegos en línea existan usuarios que tengan conductas antideportivas a este comportamiento se le denomina “Flame”, el cual consiste en mensajes deliberadamente hostiles o insultantes enviados sin ningún propósito constructivo, también lo es el abandono de la partida, hacer trampa, mala actitud, etc. En consecuencia, flamear es el acto de perjudicar el desarrollo del juego u ofender a otros jugadores usualmente dentro de una partida, y aquel que los envía, recibe el nombre de flamer.</p>
+            <p>No es sorpresa que en los juegos en línea existan usuarios que tengan conductas antideportivas, a este comportamiento se le denomina “Flame”, el cual consiste en mensajes deliberadamente hostiles o insultantes enviados sin ningún propósito constructivo, también lo es el abandono de la partida, hacer trampa, tener mala actitud, etc. En consecuencia, flamear es el acto de perjudicar el desarrollo del juego u ofender a otros jugadores usualmente dentro de una partida, y aquel que los envía, recibe el nombre de flamer.</p>
              <p>¿Haz sido victima de un flameo?,¿Sabes qué hacer en estos casos?, Riot Games entrega diversas herramientas para denunciar casos como estos durante y después del juego.</p>
                 
-              <p>Supongamos que estás en medio de una partida y ya estas harto de escuchar a Jugador4 que solo se ha dedicado a perder tiempo e insultar, no quieres ver ni escuchar sus mensajes, para esto se puede “mutear”, solo debes escribir /mute "nombre de invocador" o /ignore "nombre de invocador" (Ej: /mute Jugador4), no será notificado, por lo tanto no sabrá que ha sido silenciado y podrás volver a jugar tranquilamente.</p>
+              <p>Supongamos que estás en medio de una partida y ya estas harta de escuchar a Jugador4 que solo se ha dedicado a perder tiempo e insultar, ya no quieres ver ni escuchar sus mensajes, para esto se puede “mutear”, solo debes escribir /mute "nombre de invocador" o /ignore "nombre de invocador" (Ej: /mute Jugador4), no será notificado, por lo tanto no sabrá que ha sido silenciado y podrás volver a jugar tranquilamente.</p>
                 
               <p>Pero si se mantiene la mala actitud, no aporta al equipo o infringe las normas del Código del Invocador, o de los Términos de Uso, puedes reportar, debes hacer clic en el signo de exclamación del chat después de la partida o hacer clic derecho sobre su nombre de invocador. Los reportes le permiten a Riot Games juzgar, monitorear el comportamiento y aplicar un castigo al invocador reportado.</p>
 
@@ -150,10 +150,6 @@
         <div id="individual-champs" class="container row">  
         </div>
     </div>
-    <!-- <script src="./data/injuries/injuries.js"></script> -->
-    <!-- <script src="./data/pokemon/pokemon.js"></script> -->
-    <!-- <script src="./data/steam/steam.js"></script> -->
-    <!-- <script src="./data/worldbank/worldbank.js"></script> -->
     <script src="./data/lol/lol.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="data.js"></script>
