--- a/indexSteam.html
+++ b/indexSteam.html
@@ -21,6 +21,11 @@
               </ul>
             </div>
           </nav>
+          <div class="parallax-container">
+              <div class="parallax">
+                  <img src="IMG/hand_joystick.jpg" alt="">
+              </div>
+          </div>
     </header>
     <section>
         <div class="container">
@@ -41,8 +46,8 @@
         </div>
     </section>
     <script src="./data/steam/steam.js"></script>
-    <script src="main.js"></script>
-    <script src="data.js"></script>
+    <script src="mainSteam.js"></script>
+    <script src="dataSteam.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 
 </body>
